--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -15,7 +15,7 @@
                     🎥 Live Stream Manager
                 </h1>
                 
-                <form method="post" action="/accounts/login/">
+                <form method="post">
                     {% csrf_token %}
                     
                     <div class="form-control w-full">
