--- a/templates/core/create_live.html
+++ b/templates/core/create_live.html
@@ -97,7 +97,7 @@
 
                         <!-- Custom URL Input -->
                         <div id="url-input" class="hidden">
-                            <input type="text" placeholder="e.g., TikTok username" 
+                            <input type="text" placeholder="e.g., TikTok @username" 
                                    class="input input-bordered w-full" id="tiktok_username" />
                             <button type="button" class="btn btn-secondary mt-2" onclick="fetchTiktokUrl()">Fetch TikTok URL</button>
                         </div>
