--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -33,11 +33,7 @@
                     <li><a href="{% url 'list_ffmpeg_configs' %}">⚙️ FFmpeg Config</a></li>
                     <li><hr class="my-2 bg-base-300"></li>
                     <li><a href="/admin/">🔧 Admin</a></li>
-                    {% comment %} <li><a href="/accounts/logout/">🚪 Logout</a></li> {% endcomment %}
-                    <form method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <li> <button type="submit">Logout</button> </li>
-                    </form>
+                    <li><a href="/accounts/logout/">🚪 Logout</a></li>
                 </ul>
             </div>
         </div>
